# FlashLog-archive

./: CMakeLists.txt  README.md
.github/workflows/: formatting-check.yml
GSE/: .gitignore  FileCorrupter.py  FlashLogParser.py  GetHamsterLog.py  HamsterHelpers.py  HamsterPacket.py  Hex2BinDump.py  README.md  peak_detection.py
include/: FlashLog.h  Packet.h
src/: FlashLog.cpp  Packet.cpp
testsuite/: FlashLogTestSuite.cpp  FlashLogTestSuite.h
